[v2.0.0 - Create Version ]: Nav and HomeHeader

--- a/index.html
+++ b/index.html
@@ -44,7 +44,18 @@
 
         <main id="home">
             <header>
-                
+                <div class="logo"></div>
+
+                <p class="subtitle">Olá, eu sou</p>
+                <h1 class="title">Clarce Costa</h1>
+
+                <ul>
+                    <li><a href="#">DESIGNER DE UI E UX</a></li>
+                    <li><a href="#">DESIGNER GRÁFICA</a></li>
+                    <li><a href="#">ILUSTRADORA E<br> EDITORA DE IMAGENS</a></li>
+                </ul>
+
+                <div class="arrow"></div>
             </header>
         </main>
 
